--- a/src/index1.html
+++ b/src/index1.html
@@ -1,13 +1,204 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
 </head>
+
 <body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+  <div>
+    <img src="./header.svg" class="w-[100%]">
+  </div>
+  <div class="flex mt-[2%] w-[80%] m-auto">
+    <div class="mt-[7%]">
+      <h1 class="text-5xl">Рассчитайте стоимость <br> полиса КАСКО онлайн</h1>
+      <p class="mt-[15px]">Выберите среди предложенных компаний</p>
+      <div class="flex gap-[5px] mt-[30px] items-center">
+        <h1 class="text-7xl text-[#AEBCD1]">1</h1>
+        <p class="w-[30%] rounded-[5px] pt-[2px] h-[7vh] bg-[#F8F9FB]">Введите параметры <br> своего авто</p>
+        <img src="./Arrow 1 (Stroke).svg" class="ml-[15px]">
+        <h1 class="text-7xl text-[#AEBCD1]">2</h1>
+        <p class="w-[30%] rounded-[5px] pt-[2px] h-[7vh] bg-[#F8F9FB]">Введите параметры <br> своего авто</p>
+        <img src="./Arrow 1 (Stroke).svg" class="ml-[15px]">
+        <h1 class="text-7xl text-[#AEBCD1]">3</h1>
+        <p class="w-[30%] rounded-[5px] pt-[2px] h-[7vh] bg-[#F8F9FB]">Введите параметры <br> своего авто</p>
+      </div>
+    </div>
+    <div>
+      <img src="./PROMOPOLIS 1.png" class="absolute top-[35%] left-[60%]">
+      <img src="./iphone1 1.png" class="top-[25%] left-[70%] absolute ">
+      <img src="./Group 127063.svg" class="absolute top-[30%] left-[60%]">
+    </div>
+  </div>
+  <div class="flex gap-[40px] w-[85%] m-auto mt-[5%] border-2 border-grey h-[39vh] rounded-3xl">
+    <div class="w-[45%] h-[38vh] bg-[#E6EBFF] rounded-3xl">
+      <div class="flex gap-[5px] pt-[30px] p-[30px]  ">
+        <img src="./Arrow 1 (Stroke) (1).svg">
+        <h1 class="font-bold">Выберите тип авто:</h1>
+      </div>
+      <hr>
+      <div class="flex gap-[5px] pt-[30px] p-[30px]">
+        <p class="rounded-[50%] w-[10%] text-center h-[4vh] bg-amber-200">2</p>
+        <h1 class="font-bold">Объем двигателя:</h1>
+      </div>
+      <hr>
+      <div class="flex gap-[5px] pt-[30px] p-[30px]">
+        <p class="rounded-[50%] w-[10%] text-center h-[4vh] bg-amber-200">3</p>
+        <h1 class="font-bold">Прописка по ТП:</h1>
+      </div>
+    </div>
+    <div class="flex flex-wrap gap-[30px] h-[32vh] pt-[20px]">
+      <img src="./Group 126750.png" alt="" class="w-[20%] h-[10vh]">
+      <img src="./Group 126749.png" alt="" class="w-[15%] h-[10vh]">
+      <img src="./Group 126748.png" alt="" class="w-[16%] h-[10vh]">
+      <img src="./Group 126747.png" alt="" class="w-[14%] h-[10vh]"> 
+      <img src="./Group 126751.png" alt="" class="w-[13%] h-[10vh]">
+      <img src="./Group 126757.png" alt="" class="w-[14%] h-[10vh]">
+      <img src="./Group 126756.png" alt="" class="w-[18%] h-[10vh]">
+      <img src="./Group 126755.png" alt="" class="w-[18%] h-[10vh]">
+      <img src="./Group 126754.png." alt="">
+      <img src="./Group 126753.png" alt="" class="h-[10vh]">
+    </div>
+  </div>
+  <div class="text-center bg-[#F8F9FB] p-10 mt-30">
+        <h1 class="text-4xl font-bold">Покупая у нас Вы ничем не рискуете</h1>
+        <div class="flex mt-20 justify-around">
+            <div class="text-center w-[15%]">
+                <img src="./Vector (11).png" alt="" class="m-auto">
+                <br>
+                <p class="font-bold">Сайт работает 10 лет – это лучшая гарантия стабильности!</p>
+            </div>
+            <div class="text-center w-[15%]">
+                <img src="./Vector (11).png" alt="" class="m-auto">
+                <br>
+                <p class="font-bold">Сайт работает 10 лет – это лучшая гарантия стабильности!</p>
+            </div>
+            <div class="text-center w-[15%]">
+                <img src="./Vector (11).png" alt="" class="m-auto">
+                <br>
+                <p class="font-bold">Сайт работает 10 лет – это лучшая гарантия стабильности!</p>
+            </div>
+            <div class="text-center w-[15%]">
+                <img src="./Vector (11).png" alt="" class="m-auto">
+                <br>
+                <p class="font-bold">Сайт работает 10 лет – это лучшая гарантия стабильности!</p>
+            </div>
+            <div class="text-center w-[15%]">
+                <img src="./Vector (11).png" alt="" class="m-auto">
+                <br>
+                <p class="font-bold">Сайт работает 10 лет – это лучшая гарантия стабильности!</p>
+            </div>
+        </div>
+        <div class="flex w-[50%] border-2 m-auto mt-20 gap-10 p-2 rounded-2xl border-[#E0E6FE]">
+            <div class="mt-5">
+               <h1 class="text-6xl text-yellow-400 font-bold">100%</h1>
+            </div>
+            <div class="mt-5">
+                <p class="text-blue-600">гарантия возврата денег, страховой компанией,</p>
+                <p class="font-bold">гарантия возврата денег, страховой компанией,</p>
+            </div>
+            <div>
+                <img src="./1512 1.png" alt="" class="relative top-[-20px]">
+            </div>
+
+        </div>
+    </div>
+    <div class="mt-30 bg-[#FFA63A] text-white flex justify-center gap-10">
+        <div>
+            <img src="./Group 126793.png" alt="" class="relative top-[-50px]">
+        </div>
+        <div class="w-[70%] mt-15">
+            <h1>Хочешь страховку по минимальной цене?</h1>
+            <br>
+            <p>— Пишите нам в Вайбер или Телеграм +380503524107 или заполняте данные на нашем сайте самостоятельно!
+                Раньше нужно было звонить и вызывать агента для оформления полиса. Сейчас, с вводом электроного полиса,
+                ситуация на рынке изменилась. По телефону полис не оформляется. Нужно писать в Вайбер или оформлять
+                самостоятельно.</p>
+        </div>
+    </div>
+    <div class="mt-20 flex justify-between">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+        <img src="./logo2 1 (1).png" alt="">
+    </div>
+    <div class="mt-30 flex p-10 justify-around">
+        <div class="">
+            <div class="flex border-2 border-blue-600 rounded-2xl w-[10%] p-2 w-[100%]">
+                <img src="./Vector (12).png" alt="">
+                <p class="ml-3">Главная</p>
+            </div>
+            <br>
+            <div class="flex border-2 border-blue-600 rounded-2xl w-[10%] p-2 w-[100%]">
+                <img src="./Vector (12).png" alt="">
+                <p class="ml-3">Главная</p>
+            </div>
+            <br>
+            <div class="flex border-2 border-blue-600 rounded-2xl w-[10%] p-2 w-[100%]">
+                <img src="./Vector (12).png" alt="">
+                <p class="ml-3">Главная</p>
+            </div>
+        </div>
+        <div>
+            <h1 class="font-bold">Компания</h1>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+        </div>
+        <div>
+            <h1 class="font-bold">Компания</h1>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+        </div>
+        <div>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+            <p>Оплата и доставка</p>
+            <br>
+        </div>
+        <div>
+            <h1 class="font-bold">Обратная связь</h1>
+            <br>
+            <div class="flex gap-[5px]">
+                <img src="./Group 126796 (1).svg" alt="">
+                <img src="./Group 126796 (1).svg" alt="">
+                <img src="./Group 126796 (1).svg" alt="">
+            </div>
+            <br>
+            <img src="./0503524107.png" alt="">
+            <br>
+            <p>ответим в течении 5 минут с 9 до 21</p>
+        </div>
+    </div>
 </body>
+
 </html>
