--- a/src/index2.html
+++ b/src/index2.html
@@ -328,7 +328,7 @@
                 <img src="./whatsapp.svg" alt="">
             </div>
             <br>
-            <img src="./0503524107.png" alt="">
+            <img src="./picture2.png" alt="">
             <br>
             <p>ответим в течении 5 минут с 9 до 21</p>
         </div>
